<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#DCE6F2"
    tools:context=".Login">

    <!-- HEADER -->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- HELP BUTTON  -->
        <Button
            android:id="@+id/helpbutton"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/helpbuttonstyle"
            android:enabled="true"
            android:text="@string/action_help"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <!-- TITLE -->
        <TextView
            android:id="@+id/toolbar_respirho"
            android:layout_width="164dp"
            android:layout_height="77dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="RespirHò"
            android:textSize="36sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/logintitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/maillayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/maillayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/prompt_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#4D4C8CBF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maillayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:gravity="end"
        android:enabled="true"
        android:clickable="true"
        android:text="Forgot password?"
        android:textColor="#4D4C8CBF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordlayout" />

    <CheckBox
        android:id="@+id/keepmeloggedin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="Keep me logged in"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotpassword"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="#4C8CBF"
        android:enabled="true"
        android:text="@string/action_log_in"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keepmeloggedin" />

    <TextView
        android:id="@+id/donthaveanaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:clickable="true"
        android:enabled="true"
        android:text="@string/dont_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/signinwithgoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donthaveanaccount"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

